<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voip.ms SMS Send Demo</string>
    <string name="action_settings">Settings</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="didHint">DID</string>
    <string name="messageHint">Message</string>
    <string name="sendText">Send</string>
    <string name="destinationHint">Destination</string>
    <string name="charactersRemainingHint">160</string>
    <string name="pref_email" >Email</string>
    <string name="pref_email_summ"></string>
    <string name="pref_password">Password</string>
    <string name="pref_password_summ"></string>
    <string name="pref_did">DID</string>
    <string name="pref_did_summ"></string>
    <string name="resultText">Default Result Text</string>

</resources>
