<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".sendText">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:hint="@string/emailHint"
            android:capitalize="none" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:password="false"
            android:hint="@string/passwordHint"
            android:capitalize="none" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/did"
            android:hint="@string/didHint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/destination"
            android:hint="@string/destinationHint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:ems="10"
            android:id="@+id/message"
            android:layout_gravity="center_horizontal"
            android:hint="@string/messageHint"
            android:lines="1"
            android:gravity="top"
            android:maxLength="@integer/messageMaxLength" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/send"
                android:text="@string/sendText"
                android:onClick="sendSMS" />

            <EditText
                android:background="@null"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/charactersRemaining"
                android:layout_weight="1"
                android:inputType="none"
                android:gravity="right"
                android:editable="false"
                android:hint="@string/charactersRemainingHint" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
